--- a/config/database.yml
+++ b/config/database.yml
@@ -9,24 +9,29 @@
 # And be sure to use new-style password hashing:
 #   https://dev.mysql.com/doc/refman/5.7/en/password-hashing.html
 #
+# default: &default
+#   adapter: mysql2
+#   encoding: utf8mb4
+#   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+#   username: root
+#   password: ''
+#   socket: /opt/lampp/var/mysql/mysql.sock
+
 default: &default
-  adapter: mysql2
+  adapter: sqlite3
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password: ''
-  socket: /opt/lampp/var/mysql/mysql.sock
 
 development:
   <<: *default
-  database: findmess_development
+  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: findmess_test
+  database: db/test.sqlite3
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -48,9 +53,12 @@ test:
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
+# production:
+#   <<: *default
+#   database: findmess_production
+#   encoding: utf8
+#   username: findmess
+#   password: <%= ENV['FINDMESS_DATABASE_PASSWORD'] %>
 production:
   <<: *default
-  database: findmess_production
-  encoding: utf8
-  username: findmess
-  password: <%= ENV['FINDMESS_DATABASE_PASSWORD'] %>
+  database: db/test.sqlite3
